--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,6 +11,7 @@
     src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
     crossorigin="anonymous"></script>
+    <script src="https://www.mercadopago.com/v2/security.js" view="main"></script>
 
     <link rel="stylesheet" href="/assets/category-landing.css" media="screen, print">
 
