Configure security scripts

--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -1,4 +1,4 @@
-<script src="https://www.mercadopago.com/v2/security.js" view="detail"></script>
+<script src="https://www.mercadopago.com/v2/security.js" view="item"></script>
 <div class="as-search-wrapper" role="main">
     <div class="as-navtuck-wrapper">
         <div class="as-l-fullwidth  as-navtuck" data-events="event52">
